== Version 2.8.0 (unreleased)

Breaking changes:
* Sendmail and exim delivery now raise DeliveryError when the command exits with a nonzero exitstatus. (benmmurphy, CoolElvis)
* Sendmail and exim delivery :arguments option must be an array of string args. (benmmurphy)
* Passing unparsed headers to Mail::Field.new is no longer supported. Use Mail::Field.parse. (jeremy)
* Removed long-deprecated features: Message#register_for_delivery_notification, #has_transfer_encoding?, #add_transfer_encoding, #transfer_encoding, #message_content_type, #mime_parameters, #encode!, and Part#inline_content_id. (jeremy)

Compatibility:
* Handle a wide variety of non-RFC Message-ID formats. (peterkovacs)
* Restore LF=>CRLF conversions for properly encoded non-binary emails. (rubys)
* Gracefully parse invalid dates in Date and Received headers. (okkez)
* Converting to multipart moves Content-* headers to the new part. (kirikak2)
* Multipart Content-Type no longer includes a needless charset param. (kirikak2)
* Replies prefix subject with "Re: " instead of "RE: " per 5322 3.6.5. (mashedcode)
* Gracefully parse certain invalid Content-Type headers. (rafbm)

Features:
* Message#inspect_structure and PartsList#inspect_structure pretty-print the hierarchy of message parts. (TylerRick)

Performance:
* Speed up message encoding, especially with large attachments. (dalibor)

Bugs:
* Fix transfer encoding when message encoding is blank. (jakubonty, saks)


== Version 2.7.0 (2017-10-31)

Security:
* #1097 – SMTP security: prevent command injection via To/From addresses. (jeremy)

Features:
* #647 – IMAP: specify IMAP server search charset with Mail.find(search_charset: 'UTF-8'). (yalab)
* #650 - UTF-7 charset support. (johngrimes)
* #664 - RSpec: with_html and with_text matchers. (zakkie)
* #723 – IMAP: support `enable_starttls: true` for TLS upgrade on non-IMAPS/SSL servers. (doits)
* #804 - Configurable SMTP open_timeout and read_timeout. (ankane)